--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -1,11 +1,64 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% block content %}{% endblock content %}
-</body>
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Inverse Relation</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{% static "css/scrolling-nav.css" %}" rel="stylesheet">
+
+  </head>
+
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+      <div class="container">
+
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <img style="width: 45px;" src="{% static "img/logo.png" %}" />
+
+          <b >Inverse</b> <span style="color:rgb(81, 161, 243)">Relation</span>
+        </a>
+
+      </div>
+    </nav>
+
+    <header class="bg-primary text-white gradient">
+      <div class="container text-center">
+        <h1>A simple contact directory for clueless people</h1>
+        <hr>
+        <p class="lead">"I'm always lose my telephone numbers or forget some important contacts.<br>But now, people be able to save in my open directory your own data contact"</p>
+      </div>
+    </header>
+
+    <section id="form">
+      <div class="container">
+          {% block content %}{% endblock content %}
+      </div><!-- /container -->
+    </section>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static "vendor/jquery/jquery.min.js" %}" ></script>
+    <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}" ></script>
+
+
+    <!-- Plugin JavaScript -->
+    <script src="{% static "vendor/jquery-easing/jquery.easing.min.js" %}" ></script>
+
+    <!-- Custom JavaScript for this theme -->
+    <script src="{% static "js/scrolling-nav.js" %}" ></script>
+
+  </body>
+
 </html>
