--- a/webapp/templates/webapp/contact_form.html
+++ b/webapp/templates/webapp/contact_form.html
@@ -20,7 +20,8 @@
           </div>
         </div>
         {% endfor %}
-
+    <!--<button class='js-captcha-refresh'></button>-->
+    <hr>
     <input type="submit" value="Save" />
 </form>
 {% endblock content %}
