Include captcha. Some corrections

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -38,7 +38,9 @@
       <div class="container text-center">
         <h1>A simple contact directory for clueless people</h1>
         <hr>
-        <p class="lead">"I'm always lose my telephone numbers or forget some important contacts.<br>But now, people be able to save in my open directory your own data contact.<br><i>I hate my mobile phone - Jägercox</i>"</p>
+        <p class="lead">I always lose my telephone numbers and some important contacts.<br>
+                        But now, you can save in my open directory your own contact data.<br>
+                        <i>"Yes, I hate my mobile phone" - Jägercox</i>"</p>
       </div>
     </header>
 
