--- a/webapp/templates/webapp/success.html
+++ b/webapp/templates/webapp/success.html
@@ -6,9 +6,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <img src="{% static "img/error.png" %}" />
-            <h2>404</h2>
-            <p class="lead">Page not found</p>
+            <h2>Success!</h2>
+            <p class="lead">Your data was save!</p>
+            <p><a href="/">Back</a></p>
           </div>
         </div>
       </div>
